--- a/vuejs1/config_cli/tsconfig.node.json
+++ b/vuejs1/config_cli/tsconfig.node.json
@@ -6,5 +6,5 @@
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true
   },
-  "include": ["../vite.config.ts", "./**/*.ts", "../src/**/*.ts"]
+  "include": ["../vite.config.ts", "./**/*.ts", "../src/**/*.ts", "../src/**/*.vue"]
 }
