--- a/vuejs1/package.json
+++ b/vuejs1/package.json
@@ -1,6 +1,7 @@
 {
+  "name": "vuejs1",
   "type": "module",
-  "name": "server_oss_demo2",
+
   "version": "1.0.0",
   "description": "",
   "scripts": {
