--- a/vuejs1/tsconfig.json
+++ b/vuejs1/tsconfig.json
@@ -15,10 +15,9 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
-    "baseUrl": "src",
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["*"],
-      "@": ["."]
+      "@/*": ["src/*"]
     }
   },
   "include": [
