--- a/vuejs1/tsconfig.json
+++ b/vuejs1/tsconfig.json
@@ -24,6 +24,7 @@
     "src/**/*.ts",
     "src/**/*.d.ts",
     "src/**/*.tsx",
+    "src/**/*.vue",
     "src/auto-imports.d.ts"
   ],
   "types": ["vite/client"]
