--- a/vuejs1/package.json
+++ b/vuejs1/package.json
@@ -1,7 +1,6 @@
 {
   "name": "vuejs1",
   "type": "module",
-
   "version": "1.0.0",
   "description": "",
   "scripts": {
@@ -18,15 +17,16 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@vue-macros/reactivity-transform": "3.0.0-beta.22",
     "axios": "^1.11.0",
     "dotenv": "^17.2.1",
+    "dotenv-cli": "^9.0.0",
     "element-plus": "^2.3.8",
     "lodash": "^4.17.21",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.4.1",
     "spark-md5": "^3.0.2",
     "vue": "^3.3.4",
-    "dotenv-cli": "^9.0.0",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
