--- a/vuejs1/package.json
+++ b/vuejs1/package.json
@@ -25,6 +25,7 @@
     "lodash": "^4.17.21",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.4.1",
+    "qrcode": "^1.5.4",
     "spark-md5": "^3.0.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
